# Chess-Project

./: Game.h  README.md  board.cpp
ChessProject/: Bitboard.cpp  Bot.cpp  Bot.h  Bot_V1.cpp  Bot_V1.h  Bot_V2.cpp  Bot_V2.h  Bot_V3.cpp  Bot_V3.h  CMakeLists.txt  ChessProject.sln  Game.cpp  Game.h  board.cpp  board.h  boardGL.cpp  boardGL.h  gamerules.cpp  gltools.cpp  gltools.h  main.cpp  piece.cpp  piece.h  renders.cpp
ChessProject/ChessProject/: Bitboards.cpp  Bot_SB.h  Bot_V1.h  Bot_V2.h  Bot_V3.cpp  Bot_V4.h  ChessProject.vcxproj  ChessProject.vcxproj.filters  Game.cpp  Leela.h  Magics.cpp  board.cpp  board.h  boardGL.cpp  boardGL.h  fileUtils.cpp  fileUtils.h  gltools.h  piece.h  renders.cpp
ChessProject/ChessProject/x64/Debug/: ChessProject.exe.recipe  ChessProject.ilk  vc143.idb
ChessProject/ChessProject/x64/Debug/ChessProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ChessProject.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ChessProject/include/: Bot_SB.h  Bot_V1.h  Bot_V2.h  Bot_V3.h  Bot_V4.h  Game.h  Leela.h  board.h  boardGL.h  evaluation.h  fileUtils.h  generalmenus.h  generator.h  menu.h  openings.h  openings.json  piece.h  window.h
ChessProject/models/: 12947_Stone_Chess_Rook_Side_B_v2_l1.mtl  12950_Stone_Chess_Pawn_Side_B_v2_l3.mtl
ChessProject/src/: Bitboards.cpp  Bot_V3.cpp  Bot_V4.cpp  Game.cpp  Magics.cpp  board.cpp  boardGL.cpp  evaluation.cpp  fileUtils.cpp  fondoyambiente.cpp  generator.cpp  gltools.cpp  main.cpp  menu.cpp  renders.cpp
